<resources>
    <string name="app_name">SysadminApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Connection messages-->
    <string name="connectionOK">Conexión realizada con éxito</string>
    <string name="connectionNO">Imposible conectar con servidor</string>
    <string name="connectingServerMSG">Conectando con el servidor</string>
    <!-- settings-->
    <string name="connectionCheck">Conexión automatica</string>
    <string name="connectionCheckSummary">Conecta automaticamente al iniciar aplicacion</string>
    <string name="serverName">Dirección de servidor</string>
    <string name="userName">Nombre de usuario (root)</string>
    <string name="userPassword">Contraseña de usuario (root)</string>

    <string name="autoMessageNO">Sin conexión automática con el servidor</string>

    <!-- drawer menu strings (left)-->
    <string name="icon_connection">Conectar servidor</string>


    <string name="action_settings">Configuración</string>
    <string name="title_activity_settings">Configuración</string>


</resources>
